fixed jump IDs

--- a/website/stylesheets/teach.css
+++ b/website/stylesheets/teach.css
@@ -190,7 +190,7 @@ figcaption.title {
 	padding-top: 18px;
 }
 
-#about {
+#abt {
 	background: #E61E45;
 	padding-top: 18px;
 }
